--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 youtube = [
+    "channel/UCCzUftO8KOVkV4wQG1vkUvg", # Hosho, Marine
     "channel/UCoSrY_IQQVpmIRZ9Xf-y93g", # Gawr, Gura
     "channel/UCIdEIHpS0TdkqRkHL5OkLtA", # Natori, Sana
     "channel/UCNsidkYpIAQ4QaufptQBPHQ", # Weather News
